--- a/namespaceBackup/cronJob_backupNamespaces.yaml
+++ b/namespaceBackup/cronJob_backupNamespaces.yaml
@@ -12,7 +12,7 @@ spec:
       template:
         spec:
           nodeSelector:
-            node-role.kubernetes.io/infra: "true"
+            node-role.kubernetes.io/infra: ""
           containers:
           - name: backup-namespaces
             image: registry.redhat.io/openshift4/ose-cli
