--- a/pruning/cronJob_pruneImages.yaml
+++ b/pruning/cronJob_pruneImages.yaml
@@ -6,16 +6,16 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
-  schedule: "45 * * * *"
+  schedule: "10 * * * *"
   jobTemplate:
     spec:
       template:
         spec:
           nodeSelector:
-            node-role.kubernetes.io/infra: ""
+            node-role.kubernetes.io/worker: ""
           containers:
           - name: prune-images
-            image: registry.redhat.io/openshift4/ose-cli
+            image: registry.redhat.io/openshift4/ose-cli:v4.7
             command:
             - /bin/bash
             - -c
@@ -23,7 +23,7 @@ spec:
               #/bin/bash
               oc adm prune images --keep-tag-revisions=3 --keep-younger-than=60m --force-insecure --confirm
               oc adm prune images --prune-over-size-limit --force-insecure --confirm
-            imagePullPolicy: IfNotPresent
+            imagePullPolicy: Always
             env:
             - name: HOME
               value: "/tmp"
@@ -31,4 +31,3 @@ spec:
           serviceAccountName: cron-prune-runner-sa
           imagePullSecrets:
           - name: xyz-user-pull-secret
-
